--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "A Node.js authentication service",
   "main": "app.js",
- "scripts": {
+  "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "mocha --exit"
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -15,13 +15,14 @@
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "express-jwt": "^7.7.5",
     "jsonwebtoken": "^9.0.0",
-    "knex": "^1.0.0",
+    "knex": "2.4.0",
     "mysql2": "^3.0.0"
   },
   "devDependencies": {
-    "mocha": "^10.0.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "jest": "^29.0.0"
   },
   "author": "Quang Tran",
   "license": "ISC"
