--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-DB_HOST=database_host
-DB_PORT=database_port
-DB_USER=database_user
-DB_PASSWORD=database_password
-DB_NAME=database_name
-SECRET_KEY=secret_key
-PORT=default_is_3000
+DB_HOST=your_mysql_host
+DB_PORT=your_mysql_port
+DB_USER=your_mysql_user
+DB_PASSWORD=your_mysql_password
+DB_NAME=your_mysql_database_name
+SECRET_KEY=your_secret_key
+PORT=3000
+
