--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "express-jwt": "^7.7.5",
